# qt_sermo

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  test.py
pkgs/: eventtracker.py  filenames.py  llm.py  record.py  synchronizer.py
scripts/: eventtracker.py  test.py
src/: chat.py  main.py  record.py  sermo.py  test.py
src/pkgs/: llm.py  record.py
srv/: sermo_chat.srv  sermo_info.srv  sermo_record.srv
