<?xml version="1.0"?>
<package format="2">
  <name>qt_sermo</name>
  <version>1.0.0</version>
  <description>qt_sermo with whisper.cpp</description>

  <maintainer email="kuvajaan@arcada.fi">qtrobot</maintainer>

  <license>MIT</license>

  <author >ArcadaUAS,</author> <author email="kuvajaan@arcada.fi">Kristoffer Kuvaja Adolfsson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
